# demo

./: demo.sh
Raytracing-Demo_shadows_overlapping/: CMakeLists.txt  main  main.cpp
Raytracing-Demo_shadows_overlapping/Report/: CareilMescoffPacreau_rapport.aux  CareilMescoffPacreau_rapport.tex
Raytracing-Demo_shadows_overlapping/Scene/: Camera.h  Light.cpp  Ray.h  Sphere.cpp  Vector.cpp
Raytracing-Demo_shadows_overlapping/Screen/: color.cpp
Raytracing-cubes/: main.cpp
Raytracing-cubes/Scene/: Color.cpp  Color.h  Plane.h  Ray.h  Scene.cpp  Scene.h  TexturePlane.h  Vector.cpp  Vector.h
Raytracing-demo/: .gitignore  Makefile  [  ]  main  main.cpp
Raytracing-demo/Presentation/: CareilMescoffPacreau_presentation.tex
Raytracing-demo/Report/: CareilMescoffPacreau_rapport.tex
Raytracing-demo/Scene/: Color.cpp  Color.h  Hit.h  Object.h  Plane.cpp  Plane.h  Scene.cpp  Scene.h  Vector.h
Raytracing-demo/Screen/: image.hpp  screen.cpp  vector.hpp
Raytracing-demo_specular/: main  main.cpp
Raytracing-demo_specular/Presentation/: CareilMescoffPacreau_presentation.aux
Raytracing-demo_specular/Scene/: Camera.h  Color.cpp  Color.h  Hit.h  Light.h  Object.h  Plane.cpp  Plane.h  Scene.cpp  Sphere.cpp  Sphere.h  Vector.cpp  Vector.h
Raytracing-demo_specular/Screen/: image.cpp  rect.hpp  screen.hpp
Raytracing-floor/: main.cpp
Raytracing-floor/Scene/: Camera.h  CheckedPlane.h  Hit.h  Light.cpp  Light.h  Object.h  Plane.cpp  Scene.cpp  TexturePlane.h  Vector.cpp  Vector.h
Raytracing-reflex/: main.cpp
Raytracing_final_demo/: Doxyfile  Makefile  main.cpp
(+20 files in other folders)
